--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -85,3 +85,14 @@
 
 
 /* endslick */
+
+
+/* css-sweetAlert */
+
+.swal2-popup.swal2-toast .swal2-title {
+    margin: 0.5em 0.2em;
+    color: #6c757d;
+}
+
+
+/* end-css-sweetAlert */
