--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -3,6 +3,12 @@
 
 /* endheader */
 
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
 
 /* slidebar */
 
