--- a/public/assets/admin/css/style.css
+++ b/public/assets/admin/css/style.css
@@ -107,14 +107,14 @@
 /* couterRowTable */
 
 .table {
-    counter-reset: rowNumber;
+    counter-reset: rowNumber 1;
 }
 
 table tr:not(:first-child) {
     counter-increment: rowNumber;
 }
 
-table tr td:first-child::before {
+table tr:not(.rowSum) td:first-child:before {
     content: counter(rowNumber);
 }
 
