--- a/public/assets/clients/css/card-product.css
+++ b/public/assets/clients/css/card-product.css
@@ -42,6 +42,13 @@
     height: 45px;
 }
 
+.prd-item .card-body .card-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .prd-price {
     margin-top: 15px;
     display: flex;
