--- a/public/assets/clients/css/card-product.css
+++ b/public/assets/clients/css/card-product.css
@@ -143,3 +143,28 @@
 .btn-prd-promo__see-all:hover::after {
     border-left: 5px solid var(--link-color);
 }
+
+.list-product {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    background-color: #fff;
+    width: 100%;
+}
+
+.list-product .prd-item {
+    margin-top: 10px;
+    width: 20%;
+}
+
+.list-product .prd__btn-box {
+    background-color: #fff;
+    opacity: 0;
+    transition: 0s;
+}
+
+.list-product .prd-item:hover .prd__btn-box {
+    transform: translate(0px);
+    opacity: 1;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.5);
+}
